// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Article /> should not render the link 1`] = `
<body>
  .c0 {
  max-width: 800px;
  margin: 0 auto;
  padding: 0 20px;
}

.c1 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c2 {
  margin: 20px 0 0 0;
}

.c3 {
  font-size: 36px;
  margin: 0;
}

.c4 {
  font-size: 18px;
  margin: 5px 0;
}

<div>
    <section
      class="c0"
    >
      <main>
        <article
          class="c1"
          data-testid="article-item"
        >
          <header
            class="c2"
          >
            <h2
              class="c3"
            >
              Awesome Article
            </h2>
            <p
              class="c4"
            >
              01/18/2020
               
               · 5 minutes of reading
            </p>
          </header>
        </article>
      </main>
    </section>
  </div>
</body>
`;

exports[`<Article /> should not render the tags 1`] = `
<body>
  .c0 {
  max-width: 800px;
  margin: 0 auto;
  padding: 0 20px;
}

.c1 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c2 {
  margin: 20px 0 0 0;
}

.c3 {
  font-size: 36px;
  margin: 0;
}

.c4 {
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:hover,
.c4:focus {
  border-bottom: 1px solid;
  outline: none;
}

.c5 {
  font-size: 18px;
  margin: 5px 0;
}

<div>
    <section
      class="c0"
    >
      <main>
        <article
          class="c1"
          data-testid="article-item"
        >
          <header
            class="c2"
          >
            <h2
              class="c3"
            >
              <a
                class="c4"
                data-testid="article-header-custom-link"
                href="/awesome-article"
              >
                Awesome Article
              </a>
            </h2>
            <p
              class="c5"
            >
              20/07/2020
               
               · 5 minutos de leitura
            </p>
          </header>
        </article>
      </main>
    </section>
  </div>
</body>
`;

exports[`<Article /> should render properly 1`] = `
.c0 {
  max-width: 800px;
  margin: 0 auto;
  padding: 0 20px;
}

.c1 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c2 {
  margin: 20px 0 0 0;
}

.c3 {
  font-size: 36px;
  margin: 0;
}

.c4 {
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:hover,
.c4:focus {
  border-bottom: 1px solid;
  outline: none;
}

.c8 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
  font-size: 14px;
  font-weight: 700;
  text-transform: lowercase;
}

.c8:hover,
.c8:focus {
  border-bottom: 1px solid;
  outline: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-bottom: 0;
  padding: 0;
}

.c7 {
  list-style: none;
  padding: 0 10px 0 0;
  margin-bottom: 5px;
}

.c5 {
  font-size: 18px;
  margin: 5px 0;
}

<body>
  <div>
    <section
      class="c0"
    >
      <main>
        <article
          class="c1"
          data-testid="article-item"
        >
          <header
            class="c2"
          >
            <h2
              class="c3"
            >
              <a
                class="c4"
                data-testid="article-header-custom-link"
                href="/awesome-article"
              >
                Awesome Article
              </a>
            </h2>
            <p
              class="c5"
            >
              01/18/2020
               
               · 5 minutes of reading
            </p>
            <ul
              class="c6"
              data-testid="article-header-tags"
            >
              <li
                class="c7"
                data-testid="article-header-tag"
              >
                <a
                  class="c8"
                  href="/tags/jest"
                >
                  #
                  jest
                </a>
              </li>
              <li
                class="c7"
                data-testid="article-header-tag"
              >
                <a
                  class="c8"
                  href="/tags/testing-library"
                >
                  #
                  testing-library
                </a>
              </li>
            </ul>
          </header>
        </article>
      </main>
    </section>
  </div>
</body>
`;

exports[`<Article /> should render properly in Poruguese 1`] = `
<body>
  .c0 {
  max-width: 800px;
  margin: 0 auto;
  padding: 0 20px;
}

.c1 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c2 {
  margin: 20px 0 0 0;
}

.c3 {
  font-size: 36px;
  margin: 0;
}

.c4 {
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:hover,
.c4:focus {
  border-bottom: 1px solid;
  outline: none;
}

.c5 {
  font-size: 18px;
  margin: 5px 0;
}

<div>
    <section
      class="c0"
    >
      <main>
        <article
          class="c1"
          data-testid="article-item"
        >
          <header
            class="c2"
          >
            <h2
              class="c3"
            >
              <a
                class="c4"
                data-testid="article-header-custom-link"
                href="/awesome-article"
              >
                Awesome Article
              </a>
            </h2>
            <p
              class="c5"
            >
              20/07/2020
               
               · 5 minutos de leitura
            </p>
          </header>
        </article>
      </main>
    </section>
  </div>
</body>
`;

exports[`<Article /> should render properly the children 1`] = `
<body>
  .c0 {
  max-width: 800px;
  margin: 0 auto;
  padding: 0 20px;
}

.c1 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c2 {
  margin: 20px 0 0 0;
}

.c3 {
  font-size: 36px;
  margin: 0;
}

.c4 {
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:hover,
.c4:focus {
  border-bottom: 1px solid;
  outline: none;
}

.c5 {
  font-size: 18px;
  margin: 5px 0;
}

.c6 {
  line-height: 1.5;
}

.c6 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 1px solid;
}

.c6 a:hover,
.c6 a:focus {
  border-bottom: 1px solid;
  outline: none;
}

.c6 blockquote {
  border-left: 5px solid;
  padding-left: 20px;
}

.c6 .gatsby-highlight {
  padding: 10px 0;
}

.c6 pre[class*='language-'],
.c6 code[class*='language-'],
.c6 .gatsby-highlight {
  font-family: monospace;
  white-space: pre-wrap;
}

.c6 .line-numbers-rows,
.c6 .line-numbers-rows span::before {
  border: 0.5px solid;
}

.c6 img {
  box-shadow: none !important;
}

.c6 h3 {
  font-size: 28px;
}

<div>
    <section
      class="c0"
    >
      <main>
        <article
          class="c1"
          data-testid="article-item"
        >
          <header
            class="c2"
          >
            <h2
              class="c3"
            >
              <a
                class="c4"
                data-testid="article-header-custom-link"
                href="/awesome-article"
              >
                Awesome Article
              </a>
            </h2>
            <p
              class="c5"
            >
              18/01/2020
               
               · 5 minutos de leitura
            </p>
          </header>
          <section
            class="c6"
          >
            <p>
              Article as a Children
            </p>
          </section>
        </article>
      </main>
    </section>
  </div>
</body>
`;

exports[`<Article /> should render properly the content 1`] = `
<body>
  .c0 {
  max-width: 800px;
  margin: 0 auto;
  padding: 0 20px;
}

.c1 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c2 {
  margin: 20px 0 0 0;
}

.c3 {
  font-size: 36px;
  margin: 0;
}

.c4 {
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:hover,
.c4:focus {
  border-bottom: 1px solid;
  outline: none;
}

.c5 {
  font-size: 18px;
  margin: 5px 0;
}

.c6 {
  line-height: 1.5;
}

.c6 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 1px solid;
}

.c6 a:hover,
.c6 a:focus {
  border-bottom: 1px solid;
  outline: none;
}

.c6 blockquote {
  border-left: 5px solid;
  padding-left: 20px;
}

.c6 .gatsby-highlight {
  padding: 10px 0;
}

.c6 pre[class*='language-'],
.c6 code[class*='language-'],
.c6 .gatsby-highlight {
  font-family: monospace;
  white-space: pre-wrap;
}

.c6 .line-numbers-rows,
.c6 .line-numbers-rows span::before {
  border: 0.5px solid;
}

.c6 img {
  box-shadow: none !important;
}

.c6 h3 {
  font-size: 28px;
}

<div>
    <section
      class="c0"
    >
      <main>
        <article
          class="c1"
          data-testid="article-item"
        >
          <header
            class="c2"
          >
            <h2
              class="c3"
            >
              <a
                class="c4"
                data-testid="article-header-custom-link"
                href="/awesome-article"
              >
                Awesome Article
              </a>
            </h2>
            <p
              class="c5"
            >
              18/01/2020
               
               · 5 minutos de leitura
            </p>
          </header>
          <section
            class="c6"
          >
            Article as a content
          </section>
        </article>
      </main>
    </section>
  </div>
</body>
`;
